tests/reject/errorReraiseIvarAssign.emojic
🐇 🐟 🍇
  🐇❗️ 🤦‍♂️ ➡️ 🔡 🚧🚧 🍇
    🚨🆕🚧🔤Too low on charge🔤❗️
  🍉
🍉

🐇 💜 🍇
  🖍🆕 name 🔡 ⬅️ 🔺🤦‍♂️🐇🐟❗️
🍉

🏁 🍇
🍉
